--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
                                 "src/"
                             ]
                         },
-                        "outputPath": "dist/wam-virtual",
+                        "outputPath": "dist/",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
